--- a/container/prometheus/prometheus.yml
+++ b/container/prometheus/prometheus.yml
@@ -8,10 +8,13 @@ scrape_configs:
       - targets:
           - proxmox-exporter:9876
     metrics_path: /metrics
-#    relabel_configs:
-#      - source_labels: [__address__]
-#        target_label: __param_target
-#      - source_labels: [__param_target]
-#        target_label: instance
-#      - target_label: __address__
-#        replacement: pveexporter:9221  # PVE exporter.
+  - job_name: 'tasmota'
+    static_configs:
+      - targets:
+          - 10.0.0.115
+    metrics_path: /metrics
+  - job_name: 'ceph'
+    static_configs:
+      - targets:
+        - 10.0.0.118:9283
+    metrics_path: /metrics
