--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,16 @@ services:
     labels:
       de.danielr1996.bashdoard.name: Grafana
       de.danielr1996.bashdoard.url: https://grafana.app.danielr1996.de
-      de.danielr1996.bashdoard.icon: /favicon.ico
+      de.danielr1996.bashdoard.icon: /public/img/fav32.png
       de.danielr1996.bashdoard.id: grafana
       traefik.enable: true
       traefik.http.routers.grafana.rule: Host(`grafana.app.danielr1996.de`)
       traefik.http.routers.grafana.tls.certresolver: letsencrypt
   proxmox-exporter:
+    labels:
+      traefik.enable: true
+      traefik.http.routers.proxmox-exporter.rule: Host(`proxmox-exporter.app.danielr1996.de`)
+      traefik.http.routers.proxmox-exporter.tls.certresolver: letsencrypt
     image: ghcr.io/danielr1996/proxmox-exporter:latest
     restart: unless-stopped
     ports:
